# RenderLender

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RenderLender.sln
AssimpLib/: CMakeLists.txt
AssimpLib/include/: CAssimp.h  assimplib_export.h
AssimpLib/src/: CAssimp.cpp
CSceneImporter/: CMakeLists.txt
CSceneImporter/include/: CSceneImporterFactory.h
CSceneImporter/internal/: CAssimpSceneImporter.h  Utils.h
CSceneImporter/src/: CAssimpSceneImporter.cpp  CSceneImporterFactory.cpp
Common/: CMakeLists.txt
Common/include/: Size2D.h  Structures.h  Vector2D.h
GUILibQt/: CMakeLists.txt
GUILibQt/include/: CApplicationFactory.h  CInterfaceFactory.h  guilib_export.h
GUILibQt/internal/: CApplication.h  CMainWindow.h  COperationCreatingRenderWindow.h  CRenderArea.h  CRenderWindow.h
GUILibQt/src/: CApplication.cpp  CApplicationFactory.cpp  CInterfaceFactory.cpp  CMainWindow.cpp  COperationCreatingRenderWindow.cpp  CRenderArea.cpp  CRenderWindow.cpp
GUILibRealizationQt/: CMakeLists.txt
GUILibRealizationQt/include/: CApplicationFactory.h  guilib_export.h
GUILibRealizationQt/internal/: CApplication.h
GUILibRealizationQt/src/: CApplicationFactory.cpp  CInterfaceFactory.cpp  CMainWindow.cpp
GUIQtLib/: CMakeLists.txt
GUIQtLib/include/GUIQt/: CApplicationFactory.h  CInterfaceFactory.h
GUIQtLib/internal/: CApplication.h  CMainWindow.h  COperationCreatingRenderWindow.h  CRenderArea.h  CRenderWindow.h
GUIQtLib/src/: CApplication.cpp  CApplicationFactory.cpp  CInterfaceFactory.cpp  CMainWindow.cpp  COperationCreatingRenderWindow.cpp  CRenderArea.cpp  CRenderWindow.cpp
GUIlibInterface/: CMakeLists.txt
GUIlibInterface/include/: IApplication.h  IInterface.h
IEventLib/: CMakeLists.txt
IEventLib/include/: IEventWindow.h
IGUIlib/: CMakeLists.txt
IGUIlib/include/: IApplication.h  IInterface.h  IOperationCreatingRenderWindow.h  IRenderArea.h  IRenderWindow.h
IGUIlib/include/IGUI/: IApplication.h  IInterface.h  IOperationCreatingRenderWindow.h  IRenderArea.h  IRenderWindow.h
IRendererLib/: CMakeLists.txt
IRendererLib/include/: IMouseCursorHandler.h  IRenderer.h  RenderConfig.h
IRendererLib/include/IRenderer/: Color.h  IMaterialManager.h  IMouseCursorHandler.h  IObjectLoader.h  IRendererFacade.h  Mesh.h  Object.h  RenderConfig.h
ISceneImporter/: CMakeLists.txt
ISceneImporter/include/: ISceneImporter.h
ISceneImporterLib/: CMakeLists.txt
ISceneImporterLib/include/ISceneImporter/: ISceneImporter.h
MathTypes/: CMakeLists.txt
MathTypes/include/: Matrix.h  Point.h
MathTypes/include/MathTypes/: Matrix.h  Size.h
MathTypesH/include/MathTypes/: Point.h  Size.h
MiscellaneousH/: CMakeLists.txt
MiscellaneousH/include/Miscellaneous/: MouseButtons.h
RLMathLib/: CMakeLists.txt
RLMathLib/include/: rlmathlib_export.h
RLMathLib/include/RLMath/: Matrix.h
RLMathLib/src/: Matrix.cpp
RenderLender/: CMainWindow.cpp  CMainWindow.h  CMainWindow.ui  CMakeLists.txt  RenderLender.vcxproj  RenderLender.vcxproj.filters  main.cpp
RenderLenderApp/: CMakeLists.txt  main.cpp
RenderLenderApp/src/: main.cpp
RendererFilamentLib/: CMakeLists.txt
RendererFilamentLib/include/: rendererfilamentlib_export.h
RendererFilamentLib/include/RendererFilament/: CFilamentRendererFactory.h
RendererFilamentLib/internal/: CCamera.h  CEntity.h  CFilamentComponentCleaner.h  CFilamentRenderer.h  CFilamentRendererFacade.h  CIndexBufferManager.h  CLightManager.h  CMaterialManager.h  CMouseCursorHandler.h  CObjectLoader.h  COperator.h  CSceneLoader.h  CVertexBufferManager.h  CameraFwd.h  Conversation.h  FilamentEngineFwd.h  FilamentTypesFwd.h
RendererFilamentLib/internal/Scene/: Color.h  Mesh.h  Object.h
RendererFilamentLib/src/: CCamera.cpp  CEntity.cpp  CFilamentComponentCleaner.cpp  CFilamentRenderer.cpp  CFilamentRendererFacade.cpp  CFilamentRendererFactory.cpp  CIndexBufferManager.cpp  CLightManager.cpp  CMaterialManager.cpp  CMouseCursorHandler.cpp  CObjectLoader.cpp  COperator.cpp  CSceneLoader.cpp  CVertexBufferManager.cpp  Conversation.cpp
RendererLibFilament/: CMakeLists.txt
RendererLibFilament/include/: CFilamentRendererFactory.h  rendererlib_export.h
RendererLibFilament/internal/: CCamera.h  CEntity.h  CEventWindow.h  CFilamentRenderer.h  CFilamentRendererFacade.h  CMouseCursorHandler.h  COperator.h  CameraFwd.h  FilamentEngineFwd.h  FilamentTypesFwd.h
RendererLibFilament/src/: CCamera.cpp  CEntity.cpp  CEventWindow.cpp  CFilamentRenderer.cpp  CFilamentRendererFactory.cpp  CMouseCursorHandler.cpp  COperator.cpp  CWindowResizeHandler.cpp  FilamentComponentCleaner.cpp
Scene/: CMakeLists.txt
Scene/include/: Scene.h  SceneTypesFwd.h
Scene/include/Scene/: Scene.h
SceneH/: CMakeLists.txt
SceneH/include/Scene/: Scene.h
SceneImporterLib/: CMakeLists.txt
SceneImporterLib/include/: sceneimporterlib_export.h
SceneImporterLib/include/SceneImporter/: CSceneImporterFactory.h
SceneImporterLib/internal/: CAssimpSceneImporter.h  Utils.h
SceneImporterLib/src/: CAssimpSceneImporter.cpp  CSceneImporterFactory.cpp  Utils.cpp
